<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Llayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:orientation="vertical"
    android:rowCount="3"
    android:columnCount="3"
    android:layout_gravity="bottom"
    android:padding="16dp" >

    <GridLayout
        android:columnCount="1"
        android:rowCount="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/logoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/soundboar_logo"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:onClick="onClickImage"
            android:layout_row="0"
            android:contentDescription="@string/logo_soundboar" />

        <ImageButton
            android:id="@+id/addSoundButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo_add"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_row="0"
            android:layout_gravity="right"

            android:contentDescription="@string/logo_add"
            tools:ignore="RtlHardcoded" />



    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:columnCount="3"
        android:rowCount="10000">

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/play_button"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/son_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/son_1"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/play_button"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:layout_column="1"
            android:contentDescription="@string/son_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/son_2"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/play_button"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:layout_column="2"
            android:contentDescription="Son 3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/son_3"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/play_button"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="Son 4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/son_4"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </GridLayout>
</LinearLayout>
